<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/field_kodeBmn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/field_kodeBmn"
            android:textSize="15sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/text_kodeBmn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginStart="10dp"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/field_kodeBarang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/field_kodeBarang"
            android:textSize="15sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/text_kodeBarang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginStart="10dp"
            android:textSize="12sp"
            android:textStyle="normal" />
        <TextView
            android:id="@+id/field_NUP"
            android:text="@string/field_NUP"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text_NUP"
            android:textSize="12sp"
            android:textStyle="normal"
            android:padding="5dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/field_namaBarang"
            android:text="@string/field_namaBarang"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text_namaBarang"
            android:textSize="12sp"
            android:textStyle="normal"
            android:padding="5dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/field_merkTipe"
            android:text="@string/field_merkTipe"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text_merkTipe"
            android:textSize="12sp"
            android:textStyle="normal"
            android:padding="5dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/field_tahunPerolehan"
            android:text="@string/field_tahunPerolehan"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text_tahunPerolehan"
            android:textSize="12sp"
            android:textStyle="normal"
            android:padding="5dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/field_pengguna"
            android:text="@string/field_pengguna"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text_pengguna"
            android:textSize="12sp"
            android:textStyle="normal"
            android:padding="5dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/field_lokasiRuang"
            android:text="@string/field_lokasiRuang"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text_lokasiRuang"
            android:textSize="12sp"
            android:textStyle="normal"
            android:padding="5dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/field_kondisi"
            android:text="@string/field_kondisi"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text_kondisi"
            android:textSize="12sp"
            android:textStyle="normal"
            android:padding="5dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/field_keterangan"
            android:text="@string/field_keterangan"
            android:textSize="15sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text_keterangan"
            android:textSize="12sp"
            android:textStyle="normal"
            android:padding="5dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/button_edit" />

            <Button
                android:id="@+id/btn_no_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:text="@string/button_not_edit" />
        </TableRow>




    </LinearLayout>

</ScrollView>

</LinearLayout>
