<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical" >
<LinearLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

        <!-- A CardView that contains a TextView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            >

            <TextView
                android:id="@+id/field_kodeBmn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"

                android:padding="5dp"
                android:text="@string/field_kodeBmn"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_kodeBmn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/field_kodeBmn"
                android:padding="5dp"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/field_kodeBarang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/field_kodeBmn"

                android:padding="5dp"
                android:text="@string/field_kodeBarang"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_kodeBarang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_kodeBmn"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/field_kodeBarang"
                android:padding="5dp"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/field_NUP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/field_kodeBarang"
                android:padding="5dp"
                android:text="@string/field_NUP"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/edit_NUP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_kodeBarang"
                android:layout_alignParentRight="true"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/field_NUP"
                android:layout_toRightOf="@id/field_NUP"
                android:padding="5dp"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="normal" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >

        <TextView
            android:id="@+id/field_namaBarang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/field_namaBarang"
            android:layout_alignParentLeft="true"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/edit_namaBarang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/field_namaBarang"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/field_merkTipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/edit_namaBarang"
            android:text="@string/field_merkTipe"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edit_merkTipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/field_merkTipe"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/field_tahunPerolehan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_merkTipe"
            android:layout_alignParentLeft="true"
            android:padding="5dp"
            android:text="@string/field_tahunPerolehan"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edit_tahunPerolehan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_merkTipe"
            android:layout_toEndOf="@id/field_tahunPerolehan"
            android:layout_toRightOf="@id/field_tahunPerolehan"
            android:layout_alignParentRight="true"
            android:textAlignment="textEnd"
            android:padding="5dp"
            android:textSize="20sp"
            android:textStyle="normal" />
    </RelativeLayout>
    </androidx.cardview.widget.CardView>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:id="@+id/field_pengguna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/field_pengguna"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_pengguna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="Edit Nama Pengguna"
            android:inputType="text"
            android:padding="5dp"
            android:textSize="24sp"
            android:textStyle="normal" />
        <TextView
            android:id="@+id/field_lokasiRuang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/field_lokasiRuang"
            android:textSize="24sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/edit_lokasiRuang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="Edit Lokasi Ruang Barang"
            android:inputType="text"
            android:padding="5dp"
            android:textSize="24sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/field_kondisi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/field_kondisi"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_kondisi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="Edit Kondisi Barang"
            android:inputType="text"
            android:padding="5dp"
            android:textSize="24sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/field_keterangan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/field_keterangan"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_keterangan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:hint="Edit Keterangan Lain"
            android:inputType="text"
            android:padding="5dp"
            android:textSize="24sp"
            android:textStyle="normal" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/btn_cancel_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/button_cancel_edit" />

            <Button
                android:id="@+id/btn_submit_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:text="@string/button_submit_edit" />
        </TableRow>
        </LinearLayout>


</LinearLayout>
</ScrollView>